--- a/boot.html
+++ b/boot.html
@@ -65,21 +65,58 @@
         <div class="slideritem">
             <img src="./boots/tiger_design-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Black Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Tiger Knee Length</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
        </div>
-       b
+       
 </div>
 <div class="features">
     <div class="feature">
-        <img src="" alt="" class="featureimg">
+        <img src="/boots/free_shipping.jpg" alt=""   class= "featureimg">
         <span class="featuretitle">FREE SHIPPING</span>
-        <span class="featuredesc">Free Worldwide Shipping On Every Order</span>
-        
-    </div>
-</div>
+        <span class="featuredesc">Free worldwide shipping on every order</span>
+        </div>
+        <div class="feature">
+            <img src="/boots/return.jpg" alt="" class="featureimg">
+            <span class="featuretitle">7 DAYS RETURN</span>
+            <span class="featuredesc">Return on DEFECTIVE products ONLY</span>
+            </div>
+            <div class="feature">
+                <img src="/boots/gift card.png" alt="" class="featureimg">
+                <span class="featuretitle">GIFT CARDS</span>
+                <span class="featuredesc">Buy gift Cards and shop with them easily.</span>
+                </div>
+                <div class="feature">
+                    <img src="/boots/contact us.png" alt="" class="featureimg">
+                    <span class="featuretitle">LET'S CONNECT</span>
+                    <span class="featuredesc">Keep in touch with us via email ,intagram or support system</span>
+                    </div>
+                </div>
+            <div class="product">
+              <img src="/boots/black_velvet_-removebg-preview.png"  class="productimg"    alt="">
+               <div class="productdetails">
+                <h1 class="productitle">BROWN KNEE LENGTH</h1>
+                <h1 class="productprice">&#8377;4999</h1>
+                <p class="productdesc">Sole: Synthetic Rubber<br>
+                    Closure: Pull-On<br>
+                    Shoe Width: Medium<br>
+                    Sole: Synthetic Rubber<br>
+                    Shoe Width: Medium<br>
+                    Color - Brown <b</p>
+               </div>
+               <div class="colors">
+                <div class="color"></div>
+                <div class="color"></div>
+               </div>
+               <div class="sizes">
+                <div class="size">42</div>
+                <div class="size">43</div>
+                <div class="size">44</div>
+               </div>
+               <button class="productbutton">BUY NOW!!</button>
+            </div>
 <script src="boot.js"></script>
 </body>
 </html>
