--- a/boot.html
+++ b/boot.html
@@ -25,47 +25,47 @@
     </div>   
  </div>
  <div class="navbottom">
-    <h3 class="menuitem">Black</h3>
-    <h3 class="menuitem">Red</h3>
-    <h3 class="menuitem">Green</h3>
-    <h3 class="menuitem">Pink</h3>
-    <h3 class="menuitem">Tiger</h3>
+    <h3 class="menuitem">Knee Length</h3>
+    <h3 class="menuitem">Pencil Heels</h3>
+    <h3 class="menuitem">Velvet</h3>
+    <h3 class="menuitem">Ankle Heels</h3>
+    <h3 class="menuitem">Ankle Flat</h3>
  </div>
 </nav>
 <div class="slider">
        <div class="sliderwrapper">
            <div class="slideritem">
-            <img src="./boots/black_velvet_-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
+            <img src="./boots/brown.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Brown Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Knee Length</h1> 
             <h2 class="sliderprice">&#8377;4999</h2>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/red__knee-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Black Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Pencil Heels</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/green_knee-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Black Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Velvet</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/pink-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Black Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Ankle Heels</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
-            <img src="./boots/tiger_design-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
+            <img src="./boots/af1.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
-            <h1 class="slidertitle">Brand New<br>Tiger Knee Length</h1> 
+            <h1 class="slidertitle">Brand New<br>Ankle Flat</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             <div class="product">
-              <img src="/boots/black_velvet_-removebg-preview.png"  class="productimg"    alt="">
+              <img src="/boots/brown.png"  class="productimg"    alt="">
                <div class="productdetails">
                 <h1 class="productitle">BROWN KNEE LENGTH</h1>
                 <h1 class="productprice">&#8377;4999</h1>
@@ -117,6 +117,7 @@
                </div>
                <button class="productbutton">BUY NOW!!</button>
             </div>
+           
 <script src="boot.js"></script>
 </body>
 </html>
