--- a/boot.html
+++ b/boot.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Red+Hat+Display&family=Roboto:wght@100;300;400;500;700&family=Vollkorn:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="boot.css">
-    <title>Document</title>
+    <link rel = "icon" href="/boots/favicon.ico" type="image">
+    <title>Happy Shopping!</title>
 </head>
 <body>
     <nav>
