--- a/boot.html
+++ b/boot.html
@@ -43,21 +43,21 @@
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
-            <img src="./boots/red__knee-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
+            <img src="./boots/redpencil.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Pencil Heels</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
-            <img src="./boots/green_knee-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
+            <img src="./boots/greenvelvet.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Velvet</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
-            <img src="./boots/pink-removebg-preview.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
+            <img src="./boots/pinka.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Ankle Heels</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
@@ -98,7 +98,7 @@
             <div class="product">
               <img src="/boots/brown.png"  class="productimg"    alt="">
                <div class="productdetails">
-                <h1 class="productitle">BROWN KNEE LENGTH</h1>
+                <h1 class="productitle">KNEE LENGTH</h1>
                 <h1 class="productprice">&#8377;4999</h1>
                 <p class="productdesc">Sole: Synthetic Rubber<br>
                     Closure: Pull-On<br>
