--- a/boot.html
+++ b/boot.html
@@ -40,27 +40,31 @@
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Knee Length</h1> 
             <h2 class="sliderprice">&#8377;4999</h2>
+            <a href="#product"></a>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/redpencil.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Pencil Heels</h1> 
-            <h1 class="sliderprice">&#8377;4999</h1>
+            <h2 class="sliderprice">&#8377;4999</h2>
+            <a href="#product"></a>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/greenvelvet.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Velvet</h1> 
-            <h1 class="sliderprice">&#8377;4999</h1>
+            <h2 class="sliderprice">&#8377;4999</h2>
+            <a href="#product"></a>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
             <img src="./boots/pinka.png" height="350px" width="250px" alt="black_knee" class="sliderimg">
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Ankle Heels</h1> 
-            <h1 class="sliderprice">&#8377;4999</h1>
+            <h2 class="sliderprice">&#8377;4999</h2>
+            <a href="#product"></a>
             <button class="buybutton">Buy Now!</button>
         </div>
         <div class="slideritem">
@@ -68,6 +72,7 @@
             <div class="slidbg"></div>
             <h1 class="slidertitle">Brand New<br>Ankle Flat</h1> 
             <h1 class="sliderprice">&#8377;4999</h1>
+            <a href="#product"></a>
             <button class="buybutton">Buy Now!</button>
         </div>
        </div>
